Remove ALL the confusing naming from the API project.